tests/compile-fail/dangling_pointers/dangling_zst_deref.stderr
error: Undefined Behavior: pointer to alloc512 was dereferenced after this allocation got freed
  --> $DIR/dangling_zst_deref.rs:10:23
   |
10 |     let _x = unsafe { *p }; //~ ERROR dereferenced after this allocation got freed
   |                       ^^ pointer to alloc512 was dereferenced after this allocation got freed
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `main` at $DIR/dangling_zst_deref.rs:10:23

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

